@@ -1,9 +1,9 @@
 #!/bin/zsh
-export JAVA_OPTS="-Xms1g -Xmx1g -XX:+UseParallelGC"
+#export JAVA_OPTS="-Xms1g -Xmx1g -XX:+UseZGC"
 opt/maelstrom/maelstrom \
 test \
 -w broadcast \
 --bin service-broadcast/target/universal/stage/bin/service-broadcast \
---node-count 5 \
+--node-count 10 \
 --time-limit 10 \
 --rate 10
